version/0.77/_sources/autoapi/pyedb/generic/grpc_warnings/index.rst.txt






The ``pyedb.generic.grpc_warnings`` library
===========================================

.. py:module:: pyedb.generic.grpc_warnings


Summary
-------








.. py:currentmodule:: grpc_warnings
.. tab-set::









    .. tab-item:: Constants

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~GRPC_GENERAL_WARNING`
            - 


          * - :py:obj:`~GRPC_BETA_WARNING`
            - 


          * - :py:obj:`~GRPC_NOT_SUPPORTED_WARNING`
            - 





















Module detail
-------------

.. py:data:: GRPC_GENERAL_WARNING
   :value: 'This version of the Ansys Electronics Database (EDB) is compatible with the gRPC interface. You...


.. py:data:: GRPC_BETA_WARNING
   :value: 'You are using PyEDB with grpc, which is currently in beta. Some feature might be missing or not...


.. py:data:: GRPC_NOT_SUPPORTED_WARNING
   :value: 'Your current version does not support PyEDB grpc, falling back to DotNet version'




